[gd_scene load_steps=5 format=3 uid="uid://d0oym4yaswh2o"]

[ext_resource type="Script" path="res://Scripts/DetectionSpeech.gd" id="1_ohc0w"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ghxtu"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_cejyp"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ps1lf"]
radius = 3.0

[node name="RepV1" type="Node3D"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_ghxtu")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("CapsuleShape3D_cejyp")

[node name="Area3D" type="Area3D" parent="." groups=["npcInteractable"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_ohc0w")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CylinderShape3D_ps1lf")

[connection signal="body_entered" from="Area3D" to="Area3D" method="_on_body_entered"]
[connection signal="body_exited" from="Area3D" to="Area3D" method="_on_body_exited"]
[connection signal="npcInteraction" from="Area3D" to="Area3D" method="_on_npc_interaction"]
